<resources>
    <string name="app_name">MyYouTube</string>
    <string name="user_email">Email</string>
    <string name="user_password">Password</string>
    <string name="sign_in">Sign-in</string>
    <string name="video_thumbnail">Video thumbnail</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="play_on_youtube">Play on YouTube</string>
    <string name="playlist_empty">This playlist is empty</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="appearance">Appearance</string>
    <string name="theme">Theme</string>
    <string name="theme_summary">Choose between pre-installed themes</string>
    <string name="managing_favorites">Managing favorites</string>
    <string name="remove_favorites">Remove favorites</string>
    <string name="remove_favorites_summary">Delete all your favorites</string>
    <string name="managing_account">Managing account</string>
    <string name="user_log_out">Log out</string>
    <string name="user_log_out_summary">Log out of MyYouTube</string>
</resources>
