<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:id="@+id/connectionMain"
    android:background="@color/colorPrimary"
    android:weightSum="1">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logoIndex"
        android:layout_marginTop="50dp"
        android:src="@mipmap/ic_live_tv_black"
        android:layout_weight="0.06"
        android:contentDescription="@string/app_name" />

    <EditText
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/user_email"
        android:ems="10"
        android:id="@+id/user_email"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.06"
        android:background="#E8EAF6"
        android:textAlignment="center"
        android:textColorHint="#607D8B"
        android:textSize="15sp"
        android:layout_marginTop="100dp" />

    <EditText
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/user_password"
        android:ems="10"
        android:id="@+id/user_password"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.06"
        android:background="#E8EAF6"
        android:textAlignment="center"
        android:textColorHint="#607D8B"
        android:textSize="15sp"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/sign_in"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_marginTop="20dp"
        android:background="#607D8B"
        android:textColor="#FFFFFF" />

</LinearLayout>